[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/scenario_screen.gd" type="Script" id=1]
[ext_resource path="res://scenes/map.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/interface/dwarven/resource.png" type="Texture" id=3]
[ext_resource path="res://graphics/ui/resources/copper.png" type="Texture" id=4]
[ext_resource path="res://scenes/text_with_shadow.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/berenika_14.tres" type="DynamicFont" id=6]
[ext_resource path="res://graphics/ui/resources/lumber.png" type="Texture" id=7]
[ext_resource path="res://graphics/ui/resources/stone.png" type="Texture" id=8]
[ext_resource path="res://graphics/interface/dwarven/filler_bottom.png" type="Texture" id=9]
[ext_resource path="res://graphics/interface/dwarven/infopanel.png" type="Texture" id=10]
[ext_resource path="res://graphics/interface/dwarven/buttonpanel.png" type="Texture" id=11]

[node name="scenario" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="map" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 16 )

[node name="canvas_layer" type="CanvasLayer" parent="."]

[node name="top_bar" type="TextureRect" parent="canvas_layer"]
margin_right = 2694.0
margin_bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 3

[node name="copper_icon" type="TextureRect" parent="canvas_layer/top_bar"]
margin_left = 154.0
margin_right = 168.0
margin_bottom = 14.0
texture = ExtResource( 4 )

[node name="copper_count" parent="canvas_layer/top_bar" instance=ExtResource( 5 )]
margin_left = 172.0
margin_top = -1.0
margin_right = 229.0
margin_bottom = 15.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_text = "0"
text = "0"

[node name="lumber_icon" type="TextureRect" parent="canvas_layer/top_bar"]
margin_left = 229.0
margin_right = 243.0
margin_bottom = 14.0
texture = ExtResource( 7 )

[node name="lumber_count" parent="canvas_layer/top_bar" instance=ExtResource( 5 )]
margin_left = 247.0
margin_top = -1.0
margin_right = 304.0
margin_bottom = 15.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_text = "0"
text = "0"

[node name="stone_icon" type="TextureRect" parent="canvas_layer/top_bar"]
margin_left = 304.0
margin_right = 318.0
margin_bottom = 14.0
texture = ExtResource( 8 )

[node name="stone_count" parent="canvas_layer/top_bar" instance=ExtResource( 5 )]
margin_left = 322.0
margin_top = -1.0
margin_right = 379.0
margin_bottom = 15.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_text = "0"
text = "0"

[node name="bottom_bar" type="TextureRect" parent="canvas_layer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 380.0
margin_top = -181.0
margin_right = 2068.0
texture = ExtResource( 9 )

[node name="info_panel" type="TextureRect" parent="canvas_layer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 391.0
texture = ExtResource( 10 )

[node name="button_panel" type="TextureRect" parent="canvas_layer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -200.0
texture = ExtResource( 11 )
